--- a/views/registration.pug
+++ b/views/registration.pug
@@ -3,12 +3,12 @@ block title
   title #{pageTitle}
 
 block content
-  .container.border.border-primary.mt-5
+  .container.mt-5.d-flex.flex-row.justify-content-center
     form.form-group.col-6.pt-1(action="/registration" method="POST")
       .form-floating.mb-3
-        input#floatingInput.form-control(type="email" placeholder="Registraion Email")
+        input#floatingInput.form-control(type="email" name='email' placeholder="Registraion Email")
         label(for="floatingInput") Email address
       .form-floating.mb-3
-        input#floatingPassword.form-control(type="number" placeholder="Marks")
+        input#floatingPassword.form-control(type="number" name='marks' placeholder="Marks")
         label(for="floatingPassword") Marks
       button.btn.btn-primary(type="submit") Save
